--- a/templateCreateBookmark.html
+++ b/templateCreateBookmark.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Page Title</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" media="screen" href="styles/index.css">
   
 </head>
@@ -19,10 +20,11 @@
       </div>
     </header>
 
-    <!-- <section id="errors">
-
-
-    </section> -->
+    <section id="errors">
+        <div class="col">
+          <p id="error-message">Some Error</p>
+        </div>
+    </section>
 
     <section id="main-menu">
 
