--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
 
   </main>
 
+  <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script src="scripts/index.js"></script>
 </body>
 </html>
