remove template html

--- a/index.html
+++ b/index.html
@@ -55,57 +55,7 @@
 
 
     <section id="bookmarks">
-      <div class="col">
-        <ul id="bookmarks-list">
-
-          <li>
-            <form>
-              <p>Create a Bookmark</p>
-              <div class="bookmark-title">
-
-                <div class="form-group">
-                  <div class="col">
-                      <label for="title">Title:</label>
-                      <input id="title" type="text">
-                  </div>
-                  <div class="col">
-                    <label for="url">Url:</label>
-                    <input id="url" type="text">
-                  </div>
-                </div>
-
-                <div class="form-group">
-                  <div class="col">
-                      <label for="description">Description:</label><br>
-                      <textarea id="description"></textarea>
-                  </div>
-                </div>
-
-                <div class="form-group">
-                  <div class="col">
-                    <a href="">Visit Site</a>
-                  </div>
-                  <div class="col">
-                    <input type="submit" value="Delete">
-                  </div>
-                </div>
-                
-                <div class="form-group">
-                  <ul class="bookmark-rating">
-                    <li><i class="fas fa-star"></i></li>
-                    <li><i class="fas fa-star"></i></li>
-                    <li><i class="fas fa-star"></i></li>
-                    <li><i class="fas fa-star"></i></li>
-                    <li><i class="far fa-star"></i></li>
-                  </ul>
-                </div>
-
-              </div>
-            </form>
-          </li>
-
-        </ul>
-      </div>
+    <!-- dynamic content here -->
     </section>
 
   </main>
