--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <div class="col">
           <form>
-            <input type="submit" value="Add Bookmark">
+            <input id="add-bookmark"type="submit" value="Add Bookmark">
           </form>
         </div>
         <div class="col">
@@ -99,7 +99,7 @@
 
               </div>
             </form>
-
+          
         </ul>
       </div>
     </section>
@@ -107,6 +107,7 @@
   </main>
 
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+  <script src="scripts/bookmark-list.js"></script>
   <script src="scripts/index.js"></script>
 </body>
 </html>
