Save button event delegation

--- a/templateCreateBookmark.html
+++ b/templateCreateBookmark.html
@@ -83,10 +83,10 @@
 
                 <div class="form-group">
                   <div class="col">
-                    <input type="submit" value="Save">
+                    <input id="create-bookmark-save" type="submit" value="Save">
                   </div>
                   <div class="col">
-                    <input type="submit" value="Cancel">
+                    <input id="create-bookmark-cancel" type="submit" value="Cancel">
                   </div>
                 </div>
                 
