--- a/index.html
+++ b/index.html
@@ -107,7 +107,10 @@
   </main>
 
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-  <script src="scripts/bookmark-list.js"></script>
+  <script type="text/javascript" src="Scripts/store.js"></script>
+  <script type="text/javascript" src="Scripts/Item.js"></script>
+  <script type="text/javascript" src="scripts/bookmark-list.js"></script>
+  <script type="text/javascript" src="Scripts/api.js"></script>
   <script src="scripts/index.js"></script>
 </body>
 </html>
