fix api call for testing

--- a/index.html
+++ b/index.html
@@ -111,6 +111,6 @@
   <script type="text/javascript" src="scripts/item.js"></script>
   <script type="text/javascript" src="scripts/bookmarkList.js"></script>
   <script type="text/javascript" src="scripts/api.js"></script>
-  <script src="scripts/index.js"></script>
+  <script type="text/javascript" src="scripts/index.js"></script>
 </body>
 </html>
