fix create bookmark template

--- a/index.html
+++ b/index.html
@@ -51,6 +51,14 @@
        
     </section>
 
+    <section id="bookmarks-add-section">
+      <div class="col">
+        <div id="bookmarks-add">
+
+        </div>
+      </div>
+    </section>
+
     <section id="bookmarks">
 
       <div class="col">
