better promise chain after fetching

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           </form>
         </div>
         <div class="col"> 
-            <label for="rating">Minimum Rating</label>
+            <label for="rating">Rating</label>
             <select id="rating">
               <option>1</option>
               <option>2</option>
